# fastAPI_do_zero

./: .env  README.md  main.py  pyproject.toml
migrations/versions/: 250684f28ad4_criando_tabela_todo.py  65e562a51345_criando_tabela_users.py
src/: models.py  schemas.py  security.py  settings.py
src/routes/: auth.py  todos.py  users.py
